# protopass

./: CMakeLists.txt  README.md  main.cpp
autonomous_proto/proto/: local_path.proto
autonomous_proto/proto/cpp_out/: local_path.pb.cc  local_path.pb.h  navigation.pb.cc  navigation.pb.h
autonomous_proto/proto/python_out/: local_path_pb2.py
